--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
   }
 }
 </script>
@@ -59,6 +59,12 @@
 <body>
     <div id="root"></div>
     <div class="scanline"></div>
-    <script type="module" src="./index.tsx"></script>
+
+    <!-- 
+      esm.sh/run автоматически скомпилирует ваш TSX код.
+      Это идеальное решение для GitHub Pages, так как оно игнорирует неправильные MIME-типы сервера.
+    -->
+    <script type="module" src="https://esm.sh/run"></script>
+    <script type="text/tsx" src="./index.tsx"></script>
 </body>
 </html>
