fix: Improve image loading and sources
Refactors the AboutSection component to streamline image loading. It now initializes with an empty source and attempts to load images from a curated list of anime art links, with `me.jpg` as a fallback. This enhances the visual appeal and reliability of the image display.

Removes unused `softwareMode` prop and the `Zap` icon from `lucide-react`.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             overflow-x: hidden;
             background-color: #000;
             color: #fff;
+            margin: 0;
         }
         .mono {
             font-family: 'JetBrains Mono', monospace;
@@ -60,10 +61,7 @@
     <div id="root"></div>
     <div class="scanline"></div>
 
-    <!-- 
-      esm.sh/run автоматически скомпилирует ваш TSX код.
-      Это идеальное решение для GitHub Pages, так как оно игнорирует неправильные MIME-типы сервера.
-    -->
+    <!-- Загрузчик, который превращает .tsx в работающий сайт прямо в браузере -->
     <script type="module" src="https://esm.sh/run"></script>
     <script type="text/tsx" src="./index.tsx"></script>
 </body>
