--- a/index.html
+++ b/index.html
@@ -44,13 +44,33 @@
             animation: scanline 8s linear infinite;
             z-index: 50;
         }
+        /* Фикс для предотвращения мерцания при загрузке */
+        #root:empty {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: black;
+        }
+        #root:empty::after {
+            content: "инициализация...";
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 10px;
+            text-transform: uppercase;
+            letter-spacing: 0.5em;
+            color: rgba(255,255,255,0.3);
+            animation: pulse 1.5s infinite;
+        }
+        @keyframes pulse {
+            0%, 100% { opacity: 0.3; }
+            50% { opacity: 0.7; }
+        }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
     "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
   }
@@ -61,7 +81,11 @@
     <div id="root"></div>
     <div class="scanline"></div>
 
-    <!-- Загрузчик, который превращает .tsx в работающий сайт прямо в браузере -->
+    <!-- 
+      Загрузчик esm.sh/run. 
+      Он перехватывает скрипты с типом text/tsx, сам скачивает их (игнорируя MIME-тип сервера) 
+      и компилирует в JavaScript прямо в браузере.
+    -->
     <script type="module" src="https://esm.sh/run"></script>
     <script type="text/tsx" src="./index.tsx"></script>
 </body>
