refactor: Remove unused dependencies and Vite plugin
This commit removes unused dependencies such as `framer-motion` and `lucide-react` from the project's `package.json`. It also removes the `@vitejs/plugin-react` as the project now uses ESM imports for React and other libraries. The import maps in `index.html` have been updated to reflect these changes and use direct CDN imports for the remaining dependencies.

Additionally, minor cleanup has been done in `index.tsx` to handle the root element existence more safely and in `App.tsx` to simplify the theme toggling logic. The `index.html` also has some comments removed for brevity.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>котенок</title>
-    <!-- Favicon в виде лапки, чтобы убрать ошибку 404 и украсить вкладку -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐾</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +45,6 @@
             animation: scanline 8s linear infinite;
             z-index: 50;
         }
-        /* Фикс для предотвращения мерцания при загрузке */
         #root:empty {
             display: flex;
             align-items: center;
@@ -71,10 +69,7 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -82,12 +77,6 @@
 <body>
     <div id="root"></div>
     <div class="scanline"></div>
-
-    <!-- 
-      Загрузчик esm.sh/run. 
-      Он перехватывает скрипты с типом text/tsx, сам скачивает их (игнорируя MIME-тип сервера) 
-      и компилирует в JavaScript прямо в браузере.
-    -->
     <script type="module" src="https://esm.sh/run"></script>
     <script type="text/tsx" src="./index.tsx"></script>
 </body>
