Update text content and comments in index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                     <h2 class="text-6xl md:text-8xl font-bold tracking-tighter uppercase leading-tight">О Лилии</h2>
                     <div class="text-xl md:text-3xl leading-relaxed font-light italic opacity-80 border-l-2 pl-8 border-white/20 dark:border-white/20 light:border-black/20" id="about-text-container">
                         <p class="mb-4">"Взгляд острее льда, а в словах — металл,"</p>
-                        <p>"Она сама себе — крепость."</p>
+                        <p>"Резкий тон обрывает любую попытку сближения."</p>
+                        <p>"Она сама себе — крепость, которую никто не взял."</p>
                     </div>
                 </div>
                 <div class="flex justify-center lg:justify-end">
@@ -183,17 +184,17 @@
                 <div class="p-12 bg-black dark:bg-black light:bg-white hover:bg-zinc-900/50 transition-colors group">
                     <i data-lucide="swords" class="w-10 h-10 mb-8 opacity-20 group-hover:opacity-100 group-hover:scale-110 transition-all"></i>
                     <h3 class="text-lg font-bold tracking-widest uppercase mb-4">Может въе*ать</h3>
-                    <p class="text-xs opacity-40 leading-relaxed uppercase tracking-tighter">Сила духа и решительность в каждом действии.</p>
+                    <!-- <p class="text-xs opacity-40 leading-relaxed uppercase tracking-tighter">Сила духа и решительность в каждом действии.</p> -->
                 </div>
                 <div class="p-12 bg-black dark:bg-black light:bg-white hover:bg-zinc-900/50 transition-colors group">
                     <i data-lucide="gamepad-2" class="w-10 h-10 mb-8 opacity-20 group-hover:opacity-100 group-hover:scale-110 transition-all"></i>
                     <h3 class="text-lg font-bold tracking-widest uppercase mb-4">Играет в бравл старс</h3>
-                    <p class="text-xs opacity-40 leading-relaxed uppercase tracking-tighter">Тактическое мышление в виртуальных сражениях.</p>
+                    <!--<p class="text-xs opacity-40 leading-relaxed uppercase tracking-tighter">Тактическое мышление в виртуальных сражениях.</p>-->
                 </div>
                 <div class="p-12 bg-black dark:bg-black light:bg-white hover:bg-zinc-900/50 transition-colors group">
                     <i data-lucide="crown" class="w-10 h-10 mb-8 opacity-20 group-hover:opacity-100 group-hover:scale-110 transition-all"></i>
                     <h3 class="text-lg font-bold tracking-widest uppercase mb-4">Крутая ваще</h3>
-                    <p class="text-xs opacity-40 leading-relaxed uppercase tracking-tighter">Прирожденный лидер с безупречным стилем.</p>
+                    <!--<p class="text-xs opacity-40 leading-relaxed uppercase tracking-tighter">Прирожденный лидер с безупречным стилем.</p>-->
                 </div>
             </div>
         </section>
@@ -205,7 +206,7 @@
             <div class="flex flex-col gap-2">
                 <div class="text-xl font-bold lowercase">котенок</div>
                 <div class="opacity-30 text-[9px] font-mono uppercase tracking-[0.3em]">
-                    &copy; <span id="year"></span> &bull; All rights reserved
+                    &copy; <span id="year"></span> &bull; Все права защищены лиличкой. 
                 </div>
             </div>
             <button id="secret-btn" class="px-10 py-4 border border-white/20 hover:border-white font-bold uppercase tracking-[0.3em] text-[9px] transition-all bg-transparent hover:bg-white hover:text-black">
@@ -235,7 +236,7 @@
             </div>
         </div>
         <span id="secret-footer" class="absolute bottom-10 left-0 right-0 opacity-0 transition-all duration-1000 text-[8px] uppercase tracking-[0.6em] pointer-events-none">
-            кликните, чтобы скрыть протокол
+            кликните, чтобы скрыть окошко =)
         </span>
     </div>
 
