--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                         <p>"Она сама себе — крепость, которую никто не взял."</p>
                     </div>
                 </div>
+            </div>
                 <div class="flex justify-center lg:justify-end">
                     <div class="relative w-full max-w-[450px] aspect-[4/5] group">
                         <div class="absolute -inset-6 border border-current opacity-[0.03] rounded-[2rem] -rotate-3 transition-transform duration-700 group-hover:rotate-0"></div>
