--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
         document.getElementById('year').textContent = new Date().getFullYear();
 
         // Тема
-        const themeBtn = document.getElementById('theme-toggle');
-        const themeIcon = document.getElementById('theme-icon');
+        // const themeBtn = document.getElementById('theme-toggle');
+        // const themeIcon = document.getElementById('theme-icon');
         const header = document.getElementById('main-header');
         const html = document.documentElement;
 
