--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
             transform: translateY(0);
         }
 
-        .hero-title {
+        /* .hero-title {
             animation: heroFade 1.2s ease-out forwards;
         }
+        */
         @keyframes heroFade {
             from { opacity: 0; transform: scale(0.95) translateY(20px); }
             to { opacity: 1; transform: scale(1) translateY(0); }
