--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
             transform: translateY(0);
         }
 
-        /* .hero-title {
+        .hero-title {
             animation: heroFade 1.2s ease-out forwards;
         }
-        */
         @keyframes heroFade {
             from { opacity: 0; transform: scale(0.95) translateY(20px); }
             to { opacity: 1; transform: scale(1) translateY(0); }
@@ -123,9 +122,9 @@
                 <a href="#abilities" class="text-[10px] uppercase tracking-[0.4em] opacity-50 hover:opacity-100 transition-opacity">возможности</a>
             </nav>
 
-            <button id="theme-toggle" class="p-2.5 rounded-full hover:bg-white/10 transition-colors border border-transparent hover:border-white/5">
+            <!-- <button id="theme-toggle" class="p-2.5 rounded-full hover:bg-white/10 transition-colors border border-transparent hover:border-white/5">
                 <i data-lucide="sun" id="theme-icon" class="w-4 h-4 text-white"></i>
-            </button>
+        </button> -->
         </div>
     </header>
 
