--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     котенок
                 </h1>
                 <p class="text-xs md:text-sm font-light tracking-[0.5em] uppercase opacity-40">
-                    Lily &bull; Digital Fortress &bull; 2025
+                    Lily &bull; Dear lady &bull; 2025
                 </p>
             </div>
             <div class="absolute bottom-12 left-1/2 -translate-x-1/2 animate-bounce opacity-20">
@@ -173,7 +173,7 @@
         <section id="abilities" class="py-40 container mx-auto px-6 md:px-12 reveal">
             <div class="mb-20 flex flex-col md:flex-row md:items-end justify-between gap-6">
                 <div>
-                    <span class="text-[10px] uppercase tracking-[0.4em] opacity-40 mb-4 block">Skills & Traits</span>
+                    <span class="text-[10px] uppercase tracking-[0.4em] opacity-40 mb-4 block">Ухх, лиля</span>
                     <h2 class="text-5xl md:text-7xl font-bold tracking-tight">Её возможности</h2>
                 </div>
                 <div class="h-[1px] flex-grow bg-current opacity-10 mb-4 hidden md:block"></div>
@@ -181,7 +181,7 @@
             <div class="grid md:grid-cols-3 gap-1px bg-white/5 border border-white/5">
                 <div class="p-12 bg-black hover:bg-zinc-900/50 transition-colors group">
                     <i data-lucide="swords" class="w-10 h-10 mb-8 opacity-20 group-hover:opacity-100 group-hover:scale-110 transition-all"></i>
-                    <h3 class="text-lg font-bold tracking-widest uppercase">Может въе*ать</h3>
+                    <h3 class="text-lg font-bold tracking-widest uppercase">Может въебать если нада</h3>
                 </div>
                 <div class="p-12 bg-black hover:bg-zinc-900/50 transition-colors group">
                     <i data-lucide="gamepad-2" class="w-10 h-10 mb-8 opacity-20 group-hover:opacity-100 group-hover:scale-110 transition-all"></i>
@@ -201,7 +201,7 @@
             <div class="flex flex-col gap-2">
                 <div class="text-xl font-bold lowercase">котенок</div>
                 <div class="opacity-30 text-[9px] font-mono uppercase tracking-[0.3em]">
-                    &copy; <span id="year"></span> &bull; All rights reserved
+                    &copy; <span id="year"></span> &bull; Тут типа все права защищены лилички!!!
                 </div>
             </div>
             <button id="secret-btn" class="px-10 py-4 border border-white/20 hover:border-white font-bold uppercase tracking-[0.3em] text-[9px] transition-all bg-transparent hover:bg-white hover:text-black">
@@ -231,7 +231,7 @@
             </div>
         </div>
         <span id="secret-footer" class="absolute bottom-10 left-0 right-0 opacity-0 transition-all duration-1000 text-[8px] uppercase tracking-[0.6em] pointer-events-none">
-            кликните, чтобы скрыть протокол
+            кликните, чтобы скрыть окошечко <3
         </span>
     </div>
 
