--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="relative w-full max-w-[450px] aspect-[4/5] group">
                         <div class="absolute -inset-6 border border-current opacity-[0.03] rounded-[2rem] -rotate-3 transition-transform duration-700 group-hover:rotate-0"></div>
                         <div class="w-full h-full border border-white/10 overflow-hidden rounded-2xl bg-zinc-900 shadow-2xl relative">
-                            <img src="https://i.pinimg.com/236x/8c/d2/b5/8cd2b54b4871bcc04ba808e8a7f99e30.jpg" alt="Lily" class="w-full h-full object-cover custom-grayscale">
+                            <img src="https://avatars.mds.yandex.net/i?id=c20186640d49b9ea563728d31c68fbd0_sr-10767730-images-thumbs&n=13" alt="Lily" class="w-full h-full object-cover custom-grayscale">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent pointer-events-none"></div>
                         </div>
                     </div>
